--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^0.2.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
